--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/assets/img/inicio/icono-clinica.webp" type="image/x-icon"/>
-    <link rel="stylesheet" href="/assets/css/style.css"/>
+    <link rel="shortcut icon" href="../assets/img/inicio/icono-clinica.webp" type="image/x-icon"/>
+    <link rel="stylesheet" href="../assets/css/style.css"/>
     <title>Clinica Tu Salud</title>
 </head>
 
@@ -15,20 +15,20 @@
             <div class="nav-header">
               <button>
                 <span>
-                  <a href="/index.html">
-                    <img src="/assets/img/inicio/logo-clinica.webp"alt="logo" href="index.html"/>
-                  </a>
+                  <a href="../index.html">
+                <img src="../assets/img/inicio/logo-clinica.webp"alt="logo"/>
+              </a>
                 </span>
               </button>
             </div>
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <label for="nav-toggle" class="nav-toggle-label">☰</label>
             <ul class="menu">
-              <li><a href="/pages/servicios.html">Servicios</a></li>
-              <li><a href="/pages/nosotros.html">Nosotros</a></li>
-              <li><a href="/pages/blog.html">Blog/Noticias</a></li>
-              <li><a href="/pages/contacto.html">Contacto</a></li>
-              <li><a href="/pages/login.html">Login</a></li>
+              <li><a href="servicios.html">Servicios</a></li>
+              <li><a href="nosotros.html">Nosotros</a></li>
+              <li><a href="blog.html">Blog/Noticias</a></li>
+              <li><a href="contacto.html">Contacto</a></li>
+              <li><a href="login.html">Login</a></li>
             </ul>
         </nav>
     </header>
@@ -94,7 +94,7 @@
             </div>
 
             <div class="historia-img">
-                <img src="/assets/img/nosotros/historia.webp" alt="Historia de la clinica del Priado">
+                <img src="../assets/img/nosotros/historia.webp" alt="Historia de la clinica del Priado">
                 <p class="descripcion">
                     <b>8 de marzo de 2011 – Un día para recordar nuestro compromiso con la vida</b><br>
                     Ese día, en una pequeña sala del hospital comunitario, reafirmamos nuestra vocación de servicio. Médicos, 
@@ -115,8 +115,8 @@
 
             <div class="imagen-full contenedor-ramas">
                 <div class="rama">
-                    <a href="/pages/contacto.html">
-                        <img src="/assets/img/nosotros/medico-general.webp" alt="Medico General">
+                    <a href="contacto.html">
+                        <img src="../assets/img/nosotros/medico-general.webp" alt="Medico General">
                     </a> 
                     <section>
                         <h3>Medicina general</h3>
@@ -129,8 +129,8 @@
                 </div>
 
                 <div class="rama">
-                    <a href="/pages/contacto.html">  
-                        <img src="/assets/img/nosotros/pediatra.webp" alt="Pediatra">
+                    <a href="contacto.html">  
+                        <img src="../assets/img/nosotros/pediatra.webp" alt="Pediatra">
                     </a>
                     <section>
                         <h3>Pediatria</h3>
@@ -143,8 +143,8 @@
                 </div>
 
                 <div class="rama">
-                    <a href="/pages/contacto.html"> 
-                        <img src="/assets/img/nosotros/ginecologo.webp" alt="Ginecologo">
+                    <a href="contacto.html"> 
+                        <img src="../assets/img/nosotros/ginecologo.webp" alt="Ginecologo">
                     </a>
                     <section>
                         <h3>Ginecologia</h3>
@@ -157,8 +157,8 @@
                 </div>
 
                 <div class="rama">
-                    <a href="/pages/contacto.html">
-                        <img src="/assets/img/nosotros/odontologo.webp" alt="Odontologo">
+                    <a href="contacto.html">
+                        <img src="../assets/img/nosotros/odontologo.webp" alt="Odontologo">
                     </a>
                     <section>
                         <h3>Odontologia</h3>
@@ -171,8 +171,8 @@
                 </div>
 
                 <div class="rama">
-                    <a href="/pages/contacto.html">
-                        <img src="/assets/img/nosotros/traumatologo.webp" alt="Traumatologo">
+                    <a href="contacto.html">
+                        <img src="../assets/img/nosotros/traumatologo.webp" alt="Traumatologo">
                     </a>
                     <section> 
                         <h3>Traumatologia</h3>
@@ -185,8 +185,8 @@
                 </div>
 
                 <div class="rama">
-                    <a href="/pages/contacto.html">
-                        <img src="/assets/img/nosotros/cardiologo.webp" alt="Cardiologo">
+                    <a href="contacto.html">
+                        <img src="../assets/img/nosotros/cardiologo.webp" alt="Cardiologo">
                     </a>
                     <section>
                         <h3>Cardiologia</h3>
@@ -199,8 +199,8 @@
                 </div>
 
                 <div class="rama">
-                    <a href="/pages/contacto.html">  
-                        <img src="/assets/img/nosotros/dermatologo.webp" alt="Dermatologo">
+                    <a href="contacto.html">  
+                        <img src="../assets/img/nosotros/dermatologo.webp" alt="Dermatologo">
                     </a>
                     <section>
                         <h3>Dermatologia</h3>
@@ -213,8 +213,8 @@
                 </div>
 
                 <div class="rama">
-                    <a href="/pages/contacto.html">
-                    <img src="/assets/img/nosotros/psicologo.webp" alt="Psicologo">
+                    <a href="contacto.html">
+                    <img src="../assets/img/nosotros/psicologo.webp" alt="Psicologo">
                     </a>
                     <section>
                         <h3>Psicologia</h3>
@@ -227,8 +227,8 @@
                 </div>
 
                 <div class="rama">
-                    <a href="/pages/contacto.html">
-                        <img src="/assets/img/nosotros/anestesiologo.webp" alt="Psicologo">
+                    <a href="contacto.html">
+                        <img src="../assets/img/nosotros/anestesiologo.webp" alt="Psicologo">
                     </a>
                     <section>
                         <h3>Anestesiologo</h3>
@@ -246,7 +246,7 @@
         <div id="galeria" class="galeria-content">
             <h1 class="titulo">Galería</h1>
             <div class="tarjeta-horizontal">
-                <img src="/assets/img/nosotros/carrusel1.webp" alt="Imagen 1">
+                <img src="../assets/img/nosotros/carrusel1.webp" alt="Imagen 1">
                 <div class="descripcion">
                     <h2>Luchemos por los niños</h2>
                     <p> Hay momentos en la medicina que trascienden los tratamientos y las batas blancas. Uno de ellos
@@ -259,7 +259,7 @@
                 </div>
             </div>
             <div class="tarjeta-horizontal">
-                <img src="/assets/img/nosotros/carrusel2.webp" alt="Imagen 2">
+                <img src="../assets/img/nosotros/carrusel2.webp" alt="Imagen 2">
                 <div class="descripcion">
                     <h2>Apoyo social a Guruanitos</h2>
                     <p> En un acto de entrega y compromiso humano, un equipo de médicos voluntarios partirá este 15 de julio de 2025
@@ -273,7 +273,7 @@
                 </div>
             </div>
             <div class="tarjeta-horizontal">
-                <img src="/assets/img/nosotros/carrusel3.webp" alt="Imagen 3">
+                <img src="../assets/img/nosotros/carrusel3.webp" alt="Imagen 3">
                 <div class="descripcion">
                     <h2>Manos que curan, corazones que acompañan</h2>
                     <p> En una pequeña sala de atención, una anciana es recibida con ternura por un equipo de médicos que no solo la 
@@ -286,7 +286,7 @@
                 </div>
             </div>
             <div class="tarjeta-horizontal">
-                <img src="/assets/img/nosotros/carrusel4.webp" alt="Imagen 4">
+                <img src="../assets/img/nosotros/carrusel4.webp" alt="Imagen 4">
                 <div class="descripcion">
                     <h2>Cuidar más allá de la medicina</h2>
                     <p> En cada consulta, en cada tratamiento, los doctores se convierten en más que profesionales de la salud: se 
@@ -299,7 +299,7 @@
                 </div>
             </div>
             <div class="tarjeta-horizontal">
-                <img src="/assets/img/nosotros/carrusel5.webp" alt="Imagen 5">
+                <img src="../assets/img/nosotros/carrusel5.webp" alt="Imagen 5">
                 <div class="descripcion">
                     <h2>Respuesta inmediata, compromiso sin fronteras</h2>
                     <p> En medio del caos y la angustia tras un accidente automovilístico, los médicos llegan con rapidez, decisión y 
@@ -311,7 +311,7 @@
                 </div>
             </div>
             <div class="tarjeta-horizontal">
-                <img src="/assets/img/nosotros/carrusel6.webp" alt="Imagen 6">
+                <img src="../assets/img/nosotros/carrusel6.webp" alt="Imagen 6">
                 <div class="descripcion">
                     <h2>Cuando la ciencia y la esperanza se encuentran</h2>
                     <p> Después de años de estudio, pruebas y perseverancia, un grupo de médicos e investigadores logra lo impensable: 
@@ -339,14 +339,13 @@
         </div>
 
         <div class="icono_fijo">
-            <a href="#enlaces-inicio" ><img src="/assets/img/nosotros/icono-volver.webp" alt=boton-subir"></a>
+            <a href="#enlaces-inicio" ><img src="../assets/img/nosotros/icono-volver.webp" alt=boton-subir"></a>
         </div>
-    
     </main>
+    
     <footer>
         <p class="copy">Todos los derechos reservados</p>
         <p class="copy">2025. Clinica Tu Salud &copy;</p>
     </footer>
 </body>
-
 </html>
