--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/assets/img/inicio/icono-clinica.webp" type="image/x-icon"/>
-    <link rel="stylesheet" href="/assets/css/style.css"/>
+    <link rel="shortcut icon" href="assets/img/inicio/icono-clinica.webp" type="image/x-icon"/>
+    <link rel="stylesheet" href="assets/css/style.css"/>
     <title>Clinica Tu Salud</title>
   </head>
   <body>
@@ -14,8 +14,8 @@
         <div class="nav-header">
           <button>
             <span>
-              <a href="/index.html">
-                <img src="/assets/img/inicio/logo-clinica.webp"alt="logo" href="index.html"/>
+              <a href="index.html">
+                <img src="assets/img/inicio/logo-clinica.webp"alt="logo"/>
               </a>
             </span>
           </button>
@@ -23,17 +23,17 @@
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">☰</label>
         <ul class="menu">
-          <li><a href="/pages/servicios.html">Servicios</a></li>
-          <li><a href="/pages/nosotros.html">Nosotros</a></li>
-          <li><a href="/pages/blog.html">Blog/Noticias</a></li>
-          <li><a href="/pages/contacto.html">Contacto</a></li>
-          <li><a href="/pages/login.html">Login</a></li>
+          <li><a href="pages/servicios.html">Servicios</a></li>
+          <li><a href="pages/nosotros.html">Nosotros</a></li>
+          <li><a href="pages/blog.html">Blog/Noticias</a></li>
+          <li><a href="pages/contacto.html">Contacto</a></li>
+          <li><a href="pages/login.html">Login</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <div>
-        <img src="/assets/img/inicio/banner-clinica.webp" alt="Clinica Tu Salud" class="banner"/>
+        <img src="assets/img/inicio/banner-clinica.webp" alt="Clinica Tu Salud" class="banner"/>
       </div>
       <section class="seccion bienvenida">
         <div class="bienvenida contenido-bienvenida">
@@ -51,8 +51,8 @@
         <div class="contenido-especialidades">
           <article>
             <h4>Cardiología</h4>
-            <a href="/pages/servicios.html">
-              <img src="/assets/img/inicio/icono-cardiologia.webp" alt="Cardiología" />
+            <a href="pages/servicios.html">
+              <img src="assets/img/inicio/icono-cardiologia.webp" alt="Cardiología" />
             </a>
             <p>
               Control y prevención de <br />
@@ -62,8 +62,8 @@
 
           <article>
             <h4>Pediatría</h4>
-            <a href="/pages/servicios.html">
-              <img src="/assets/img/inicio/icono-pediatria.webp" alt="Pediatría" />
+            <a href="pages/servicios.html">
+              <img src="assets/img/inicio/icono-pediatria.webp" alt="Pediatría" />
             </a>
             <p>
               Cuida la salud de los más <br />
@@ -73,8 +73,8 @@
 
           <article>
             <h4>Laboratorio clínico</h4>
-            <a href="/pages/servicios.html">
-              <img src="/assets/img/inicio/icono-laboratorio-medico.webp"alt="Laboratorio"/>
+            <a href="pages/servicios.html">
+              <img src="assets/img/inicio/icono-laboratorio-medico.webp"alt="Laboratorio"/>
             </a>
             <p>
               Resultados precisos y <br />
@@ -90,7 +90,7 @@
             <div class="info-izquierda">
               <h3>Agenda tu cita:</h3>
               <button type="button" class="boton">
-                <a href="/pages/contacto.html" class="boton">
+                <a href="pages/contacto.html" class="boton">
                   Contáctanos ahora
                 </a>
               </button>
