--- a/pages/blog.html
+++ b/pages/blog.html
@@ -2,8 +2,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/assets/img/inicio/icono-clinica.webp" type="image/x-icon"/>
-    <link rel="stylesheet" href="/assets/css/style.css"/>
+    <link rel="shortcut icon" href="../assets/img/inicio/icono-clinica.webp" type="image/x-icon"/>
+    <link rel="stylesheet" href="../assets/css/style.css"/>
     <title>Blog Clinica Tu Salud</title>
   </head>
 
@@ -14,8 +14,8 @@
         <div class="nav-header">
           <button>
             <span>
-              <a href="/index.html">
-                <img src="/assets/img/inicio/logo-clinica.webp"alt="logo" href="index.html"/>
+              <a href="../index.html">
+                <img src="../assets/img/inicio/logo-clinica.webp"alt="logo"/>
               </a>
             </span>
           </button>
@@ -23,11 +23,11 @@
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">☰</label>
         <ul class="menu">
-          <li><a href="/pages/servicios.html">Servicios</a></li>
-          <li><a href="/pages/nosotros.html">Nosotros</a></li>
-          <li><a href="/pages/blog.html">Blog/Noticias</a></li>
-          <li><a href="/pages/contacto.html">Contacto</a></li>
-          <li><a href="/pages/login.html">Login</a></li>
+          <li><a href="servicios.html">Servicios</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="blog.html">Blog/Noticias</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="login.html">Login</a></li>
         </ul>
       </nav>
     </header>
@@ -63,7 +63,7 @@
             </li>
           </ul>
           <div>
-            <img src="/assets/img/blog/cardiologia.webp" alt="Imagen sobre salud"/>
+            <img src="../assets/img/blog/cardiologia.webp" alt="Imagen sobre salud"/>
             <p>
               <a href="#">Leer más</a>
             </p>
@@ -100,7 +100,7 @@
             </li>
           </ul>
           <div>
-            <img src="/assets/img/blog/medico.webp" alt="campaña de vacunación" class="imagen-campana"/>
+            <img src="../assets/img/blog/medico.webp" alt="campaña de vacunación" class="imagen-campana"/>
             <p>
               <a href="#" class="detalles-link">Detalles aquí</a>
             </p>
@@ -118,7 +118,7 @@
             </p>
           </div>
           <div>
-            <img src="/assets/img/blog/novedades.webp" alt="Avances en la medicina"/>
+            <img src="../assets/img/blog/novedades.webp" alt="Avances en la medicina"/>
             <p>
               <a href="#">Leer más sobre los avances recientes</a>
             </p>
