--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/assets/img/inicio/icono-clinica.webp" type="image/x-icon"/>
-    <link rel="stylesheet" href="/assets/css/style.css"/>
+    <link rel="shortcut icon" href="../assets/img/inicio/icono-clinica.webp" type="image/x-icon"/>
+    <link rel="stylesheet" href="../assets/css/style.css"/>
     <title>Contacto Clinica Tu Salud</title>
   </head>
 
@@ -15,8 +15,8 @@
         <div class="nav-header">
           <button>
             <span>
-              <a href="/index.html">
-                <img src="/assets/img/inicio/logo-clinica.webp"alt="logo" href="index.html"/>
+              <a href="../index.html">
+                <img src="../assets/img/inicio/logo-clinica.webp"alt="logo"/>
               </a>
             </span>
           </button>
@@ -24,17 +24,17 @@
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">☰</label>
         <ul class="menu">
-          <li><a href="/pages/servicios.html">Servicios</a></li>
-          <li><a href="/pages/nosotros.html">Nosotros</a></li>
-          <li><a href="/pages/blog.html">Blog/Noticias</a></li>
-          <li><a href="/pages/contacto.html">Contacto</a></li>
-          <li><a href="/pages/login.html">Login</a></li>
+          <li><a href="servicios.html">Servicios</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="blog.html">Blog/Noticias</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="login.html">Login</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <div>
-        <img src="/assets/img/contacto/clinica.webp" alt="Clinica Tu Salud" class="banner"/>
+        <img src="../assets/img/contacto/clinica.webp" alt="Clinica Tu Salud" class="banner"/>
       </div>
       <h1 class="contacto-titulo titulo">Contacto</h1>
       <p class="contacto-descripcion">
