--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <base href="/proyecto_clinica/"/>
     <link rel="shortcut icon" href="../assets/img/inicio/icono-clinica.webp" type="image/x-icon"/>
     <link rel="stylesheet" href="../assets/css/style.css"/>
     <title>Blog Clinica Tu Salud</title>
