Las otras paginas linkeadas correctamente

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="/proyecto_clinica/"/>
     <link rel="shortcut icon" href="../assets/img/inicio/icono-clinica.webp" type="image/x-icon"/>
-    <link rel="stylesheet" href="../assets/css/style.css"/>
+    <link rel="stylesheet" href="assets/css/style.css"/>
     <title>Servicios Clinica Tu Salud</title>
   </head>
   <body>
