--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="/proyecto_clinica/"/>
-    <link rel="shortcut icon" href="../assets/img/inicio/icono-clinica.webp" type="image/x-icon"/>
+    <link rel="shortcut icon" href="assets/img/inicio/icono-clinica.webp" type="image/x-icon"/>
     <link rel="stylesheet" href="assets/css/style.css"/>
     <title>Servicios Clinica Tu Salud</title>
   </head>
@@ -15,8 +15,8 @@
         <div class="nav-header">
           <button>
             <span>
-              <a href="../index.html">
-                <img src="../assets/img/inicio/logo-clinica.webp"alt="logo"/>
+              <a href="index.html">
+                <img src="assets/img/inicio/logo-clinica.webp"alt="logo"/>
               </a>
             </span>
           </button>
@@ -24,18 +24,18 @@
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">☰</label>
         <ul class="menu">
-          <li><a href="servicios.html">Servicios</a></li>
-          <li><a href="nosotros.html">Nosotros</a></li>
-          <li><a href="blog.html">Blog/Noticias</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-          <li><a href="login.html">Login</a></li>
+          <li><a href="pages/servicios.html">Servicios</a></li>
+          <li><a href="pages/nosotros.html">Nosotros</a></li>
+          <li><a href="pages/blog.html">Blog/Noticias</a></li>
+          <li><a href="pages/contacto.html">Contacto</a></li>
+          <li><a href="pages/login.html">Login</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
       <div>
-        <img src="/assets/img/servicios/banner.webp" alt="Clinica Tu Salud"class="banner"/>
+        <img src="assets/img/servicios/banner.webp" alt="Clinica Tu Salud"class="banner"/>
       </div>
       <h1 class="titulo">Servicios de Clinica Tu Salud</h1>
       <p class="titulo-servicio">
@@ -45,7 +45,7 @@
 
       <div class="service-container">
         <div class="service-card">
-          <a href="/pages/contacto.html">
+          <a href="pages/contacto.html">
             <h2>Consultas Médicas</h2>
             <p>
               Atención personalizada en distintas especialidades como medicina
@@ -54,7 +54,7 @@
           </a>
         </div>
         <div class="service-card">
-          <a href="/pages/contacto.html">
+          <a href="pages/contacto.html">
             <h2>Emergencias 24/7</h2>
             <p>
               Atención inmediata y oportuna ante cualquier urgencia médica
@@ -63,7 +63,7 @@
           </a>
         </div>
         <div class="service-card">
-          <a href="/pages/contacto.html">
+          <a href="pages/contacto.html">
             <h2>Laboratorio Clínico</h2>
             <p>
               Realizamos análisis de sangre, orina y otros exámenes con
@@ -72,7 +72,7 @@
           </a>
         </div>
         <div class="service-card">
-          <a href="/pages/contacto.html">
+          <a href="pages/contacto.html">
             <h2>Ecografías y Rayos X</h2>
             <p>
               Contamos con equipos modernos para realizar diagnósticos precisos
@@ -81,7 +81,7 @@
           </a>
         </div>
         <div class="service-card">
-          <a href="/pages/contacto.html">
+          <a href="pages/contacto.html">
             <h2>Farmacia Interna</h2>
             <p>
               Ofrecemos medicamentos recetados por nuestros doctores
