--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="/proyecto_clinica/"/>
-    <link rel="shortcut icon" href="../assets/img/inicio/icono-clinica.webp" type="image/x-icon"/>
+    <link rel="shortcut icon" href="assets/img/inicio/icono-clinica.webp" type="image/x-icon"/>
     <link rel="stylesheet" href="assets/css/style.css"/>
     <title>Clinica Tu Salud</title>
 </head>
@@ -16,8 +16,8 @@
             <div class="nav-header">
               <button>
                 <span>
-                  <a href="../index.html">
-                <img src="../assets/img/inicio/logo-clinica.webp"alt="logo"/>
+                  <a href="index.html">
+                <img src="assets/img/inicio/logo-clinica.webp"alt="logo"/>
               </a>
                 </span>
               </button>
@@ -25,11 +25,11 @@
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <label for="nav-toggle" class="nav-toggle-label">☰</label>
             <ul class="menu">
-              <li><a href="servicios.html">Servicios</a></li>
-              <li><a href="nosotros.html">Nosotros</a></li>
-              <li><a href="blog.html">Blog/Noticias</a></li>
-              <li><a href="contacto.html">Contacto</a></li>
-              <li><a href="login.html">Login</a></li>
+              <li><a href="pages/servicios.html">Servicios</a></li>
+              <li><a href="pages/nosotros.html">Nosotros</a></li>
+              <li><a href="pages/blog.html">Blog/Noticias</a></li>
+              <li><a href="pages/contacto.html">Contacto</a></li>
+              <li><a href="pages/login.html">Login</a></li>
             </ul>
         </nav>
     </header>
@@ -95,7 +95,7 @@
             </div>
 
             <div class="historia-img">
-                <img src="../assets/img/nosotros/historia.webp" alt="Historia de la clinica del Priado">
+                <img src="assets/img/nosotros/historia.webp" alt="Historia de la clinica del Priado">
                 <p class="descripcion">
                     <b>8 de marzo de 2011 – Un día para recordar nuestro compromiso con la vida</b><br>
                     Ese día, en una pequeña sala del hospital comunitario, reafirmamos nuestra vocación de servicio. Médicos, 
@@ -116,8 +116,8 @@
 
             <div class="imagen-full contenedor-ramas">
                 <div class="rama">
-                    <a href="contacto.html">
-                        <img src="../assets/img/nosotros/medico-general.webp" alt="Medico General">
+                    <a href="pages/contacto.html">
+                        <img src="assets/img/nosotros/medico-general.webp" alt="Medico General">
                     </a> 
                     <section>
                         <h3>Medicina general</h3>
@@ -130,8 +130,8 @@
                 </div>
 
                 <div class="rama">
-                    <a href="contacto.html">  
-                        <img src="../assets/img/nosotros/pediatra.webp" alt="Pediatra">
+                    <a href="pages/contacto.html">  
+                        <img src="assets/img/nosotros/pediatra.webp" alt="Pediatra">
                     </a>
                     <section>
                         <h3>Pediatria</h3>
@@ -144,8 +144,8 @@
                 </div>
 
                 <div class="rama">
-                    <a href="contacto.html"> 
-                        <img src="../assets/img/nosotros/ginecologo.webp" alt="Ginecologo">
+                    <a href="pages/contacto.html"> 
+                        <img src="assets/img/nosotros/ginecologo.webp" alt="Ginecologo">
                     </a>
                     <section>
                         <h3>Ginecologia</h3>
@@ -158,8 +158,8 @@
                 </div>
 
                 <div class="rama">
-                    <a href="contacto.html">
-                        <img src="../assets/img/nosotros/odontologo.webp" alt="Odontologo">
+                    <a href="pages/contacto.html">
+                        <img src="assets/img/nosotros/odontologo.webp" alt="Odontologo">
                     </a>
                     <section>
                         <h3>Odontologia</h3>
@@ -172,8 +172,8 @@
                 </div>
 
                 <div class="rama">
-                    <a href="contacto.html">
-                        <img src="../assets/img/nosotros/traumatologo.webp" alt="Traumatologo">
+                    <a href="pages/contacto.html">
+                        <img src="assets/img/nosotros/traumatologo.webp" alt="Traumatologo">
                     </a>
                     <section> 
                         <h3>Traumatologia</h3>
@@ -186,8 +186,8 @@
                 </div>
 
                 <div class="rama">
-                    <a href="contacto.html">
-                        <img src="../assets/img/nosotros/cardiologo.webp" alt="Cardiologo">
+                    <a href="pages/contacto.html">
+                        <img src="assets/img/nosotros/cardiologo.webp" alt="Cardiologo">
                     </a>
                     <section>
                         <h3>Cardiologia</h3>
@@ -200,8 +200,8 @@
                 </div>
 
                 <div class="rama">
-                    <a href="contacto.html">  
-                        <img src="../assets/img/nosotros/dermatologo.webp" alt="Dermatologo">
+                    <a href="pages/contacto.html">  
+                        <img src="assets/img/nosotros/dermatologo.webp" alt="Dermatologo">
                     </a>
                     <section>
                         <h3>Dermatologia</h3>
@@ -214,8 +214,8 @@
                 </div>
 
                 <div class="rama">
-                    <a href="contacto.html">
-                    <img src="../assets/img/nosotros/psicologo.webp" alt="Psicologo">
+                    <a href="pages/contacto.html">
+                    <img src="assets/img/nosotros/psicologo.webp" alt="Psicologo">
                     </a>
                     <section>
                         <h3>Psicologia</h3>
@@ -228,8 +228,8 @@
                 </div>
 
                 <div class="rama">
-                    <a href="contacto.html">
-                        <img src="../assets/img/nosotros/anestesiologo.webp" alt="Psicologo">
+                    <a href="pages/contacto.html">
+                        <img src="assets/img/nosotros/anestesiologo.webp" alt="Psicologo">
                     </a>
                     <section>
                         <h3>Anestesiologo</h3>
@@ -247,7 +247,7 @@
         <div id="galeria" class="galeria-content">
             <h1 class="titulo">Galería</h1>
             <div class="tarjeta-horizontal">
-                <img src="../assets/img/nosotros/carrusel1.webp" alt="Imagen 1">
+                <img src="assets/img/nosotros/carrusel1.webp" alt="Imagen 1">
                 <div class="descripcion">
                     <h2>Luchemos por los niños</h2>
                     <p> Hay momentos en la medicina que trascienden los tratamientos y las batas blancas. Uno de ellos
@@ -260,7 +260,7 @@
                 </div>
             </div>
             <div class="tarjeta-horizontal">
-                <img src="../assets/img/nosotros/carrusel2.webp" alt="Imagen 2">
+                <img src="assets/img/nosotros/carrusel2.webp" alt="Imagen 2">
                 <div class="descripcion">
                     <h2>Apoyo social a Guruanitos</h2>
                     <p> En un acto de entrega y compromiso humano, un equipo de médicos voluntarios partirá este 15 de julio de 2025
@@ -274,7 +274,7 @@
                 </div>
             </div>
             <div class="tarjeta-horizontal">
-                <img src="../assets/img/nosotros/carrusel3.webp" alt="Imagen 3">
+                <img src="assets/img/nosotros/carrusel3.webp" alt="Imagen 3">
                 <div class="descripcion">
                     <h2>Manos que curan, corazones que acompañan</h2>
                     <p> En una pequeña sala de atención, una anciana es recibida con ternura por un equipo de médicos que no solo la 
@@ -287,7 +287,7 @@
                 </div>
             </div>
             <div class="tarjeta-horizontal">
-                <img src="../assets/img/nosotros/carrusel4.webp" alt="Imagen 4">
+                <img src="assets/img/nosotros/carrusel4.webp" alt="Imagen 4">
                 <div class="descripcion">
                     <h2>Cuidar más allá de la medicina</h2>
                     <p> En cada consulta, en cada tratamiento, los doctores se convierten en más que profesionales de la salud: se 
@@ -300,7 +300,7 @@
                 </div>
             </div>
             <div class="tarjeta-horizontal">
-                <img src="../assets/img/nosotros/carrusel5.webp" alt="Imagen 5">
+                <img src="assets/img/nosotros/carrusel5.webp" alt="Imagen 5">
                 <div class="descripcion">
                     <h2>Respuesta inmediata, compromiso sin fronteras</h2>
                     <p> En medio del caos y la angustia tras un accidente automovilístico, los médicos llegan con rapidez, decisión y 
@@ -312,7 +312,7 @@
                 </div>
             </div>
             <div class="tarjeta-horizontal">
-                <img src="../assets/img/nosotros/carrusel6.webp" alt="Imagen 6">
+                <img src="assets/img/nosotros/carrusel6.webp" alt="Imagen 6">
                 <div class="descripcion">
                     <h2>Cuando la ciencia y la esperanza se encuentran</h2>
                     <p> Después de años de estudio, pruebas y perseverancia, un grupo de médicos e investigadores logra lo impensable: 
@@ -340,7 +340,7 @@
         </div>
 
         <div class="icono_fijo">
-            <a href="#enlaces-inicio" ><img src="../assets/img/nosotros/icono-volver.webp" alt=boton-subir"></a>
+            <a href="#enlaces-inicio" ><img src="assets/img/nosotros/icono-volver.webp" alt=boton-subir"></a>
         </div>
     </main>
     
