Pages nosotros corregida

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -340,7 +340,7 @@
         </div>
 
         <div class="icono_fijo">
-            <a href="#enlaces-inicio" ><img src="assets/img/nosotros/icono-volver.webp" alt=boton-subir"></a>
+            <a href="#enlaces-inicio" ><img src="assets/img/nosotros/icono-volver.webp" alt="boton-subir"></a>
         </div>
     </main>
     
