Pages nosotros corregido

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navegacion" id="enlaces-inicio">
+    <header id="enlaces-inicio">
+        <nav class="navegacion">
             <div class="contenedor-fondo"></div>
             <div class="nav-header">
               <button>
@@ -36,11 +36,11 @@
     <main class="nosotros">
         <div class="links">
             <nav class="nosotros-enlace">
-                <li><a href="#nosotros">Nosotros</a></li>
-                <li><a href="#historia">Historia</a></li>
-                <li><a href="#equipo">Equipo</a></li>
-                <li><a href="#galeria">Galeria</a></li>
-                <li><a href="#Ubicacion">Ubicacion</a></li>            
+                <li><a href="pages/nosotros.html#nosotros">Nosotros</a></li>
+                <li><a href="pages/nosotros.html#historia">Historia</a></li>
+                <li><a href="pages/nosotros.html#equipo">Equipo</a></li>
+                <li><a href="pages/nosotros.html#galeria">Galeria</a></li>
+                <li><a href="pages/nosotros.html#ubicacion">Ubicacion</a></li>            
             </nav>
         </div>
 
@@ -325,7 +325,7 @@
             </div>
         </div>
 
-        <div id="Ubicacion" class="gps-content">
+        <div id="ubicacion" class="gps-content">
             <div class="gps-txt">
                 <h1 class="titulo">Ubicación</h1>
                 <div class="gps-texto">
@@ -340,7 +340,7 @@
         </div>
 
         <div class="icono_fijo">
-            <a href="#enlaces-inicio" ><img src="assets/img/nosotros/icono-volver.webp" alt="boton-subir"></a>
+            <a href="pages/nosotros.html#enlaces-inicio" ><img src="assets/img/nosotros/icono-volver.webp" alt="boton-subir"></a>
         </div>
     </main>
     
