--- a/index.html
+++ b/index.html
@@ -1,119 +1,118 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <base href="/proyecto_clinica/"/>
-    <link rel="shortcut icon" href="assets/img/inicio/icono-clinica.webp" type="image/x-icon"/>
-    <link rel="stylesheet" href="assets/css/style.css"/>
-    <title>Clinica Tu Salud</title>
-  </head>
-  <body>
-    <header>
-      <nav class="navegacion">
-        <div class="contenedor-fondo"></div>
-        <div class="nav-header">
-          <button>
-            <span>
-              <a href="index.html">
-                <img src="assets/img/inicio/logo-clinica.webp"alt="logo"/>
-              </a>
-            </span>
-          </button>
-        </div>
-        <input type="checkbox" id="nav-toggle" class="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">☰</label>
-        <ul class="menu">
-          <li><a href="pages/servicios.html">Servicios</a></li>
-          <li><a href="pages/nosotros.html">Nosotros</a></li>
-          <li><a href="pages/blog.html">Blog/Noticias</a></li>
-          <li><a href="pages/contacto.html">Contacto</a></li>
-          <li><a href="pages/login.html">Login</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <div>
-        <img src="assets/img/inicio/banner-clinica.webp" alt="Clinica Tu Salud" class="banner"/>
-      </div>
-      <section class="seccion bienvenida">
-        <div class="bienvenida contenido-bienvenida">
-          <h1 class="titulo">Clinica Tu Salud</h1>
-          <p>Tu salud es nuestra prioridad</p>
-          <h2>Bienvenido a la Clínica Salud y Vida</h2>
-          <p>
-            Brindamos atención médica integral con profesionales altamente
-            calificados y tecnología moderna.
-          </p>
-        </div>
-      </section>
-      <section class="seccion especialidades">
-        <h3>Nuestras especialidades</h3>
-        <div class="contenido-especialidades">
-          <article>
-            <h4>Cardiología</h4>
-            <a href="pages/servicios.html">
-              <img src="assets/img/inicio/icono-cardiologia.webp" alt="Cardiología" />
-            </a>
-            <p>
-              Control y prevención de <br />
-              enfermedades cardíacas.
-            </p>
-          </article>
-
-          <article>
-            <h4>Pediatría</h4>
-            <a href="pages/servicios.html">
-              <img src="assets/img/inicio/icono-pediatria.webp" alt="Pediatría" />
-            </a>
-            <p>
-              Cuida la salud de los más <br />
-              pequeños de la casa.
-            </p>
-          </article>
-
-          <article>
-            <h4>Laboratorio clínico</h4>
-            <a href="pages/servicios.html">
-              <img src="assets/img/inicio/icono-laboratorio-medico.webp"alt="Laboratorio"/>
-            </a>
-            <p>
-              Resultados precisos y <br />
-              confiables para tu diagnóstico.
-            </p>
-          </article>
-        </div>
-      </section>
-
-      <section class="seccion contacto">
-        <div class="contenedor">
-          <div class="contenido-contacto">
-            <div class="info-izquierda">
-              <h3>Agenda tu cita:</h3>
-              <button type="button" class="boton">
-                <a href="pages/contacto.html" class="boton">
-                  Contáctanos ahora
+  <!DOCTYPE html>
+  <html lang="es">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="shortcut icon" href="assets/img/inicio/icono-clinica.webp" type="image/x-icon"/>
+      <link rel="stylesheet" href="assets/css/style.css"/>
+      <title>Clinica Tu Salud</title>
+    </head>
+    <body>
+      <header>
+        <nav class="navegacion">
+          <div class="contenedor-fondo"></div>
+          <div class="nav-header">
+            <button>
+              <span>
+                <a href="index.html">
+                  <img src="assets/img/inicio/logo-clinica.webp"alt="logo"/>
                 </a>
-              </button>
-            </div>
+              </span>
+            </button>
+          </div>
+          <input type="checkbox" id="nav-toggle" class="nav-toggle">
+          <label for="nav-toggle" class="nav-toggle-label">☰</label>
+          <ul class="menu">
+            <li><a href="servicios.html">Servicios</a></li>
+            <li><a href="nosotros.html">Nosotros</a></li>
+            <li><a href="blog.html">Blog/Noticias</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="login.html">Login</a></li>
+          </ul>
+        </nav>
+      </header>
+      <main>
+        <div>
+          <img src="assets/img/inicio/banner-clinica.webp" alt="Clinica Tu Salud" class="banner"/>
+        </div>
+        <section class="seccion bienvenida">
+          <div class="bienvenida contenido-bienvenida">
+            <h1 class="titulo">Clinica Tu Salud</h1>
+            <p>Tu salud es nuestra prioridad</p>
+            <h2>Bienvenido a la Clínica Salud y Vida</h2>
+            <p>
+              Brindamos atención médica integral con profesionales altamente
+              calificados y tecnología moderna.
+            </p>
+          </div>
+        </section>
+        <section class="seccion especialidades">
+          <h3>Nuestras especialidades</h3>
+          <div class="contenido-especialidades">
+            <article>
+              <h4>Cardiología</h4>
+              <a href="servicios.html">
+                <img src="assets/img/inicio/icono-cardiologia.webp" alt="Cardiología" />
+              </a>
+              <p>
+                Control y prevención de <br />
+                enfermedades cardíacas.
+              </p>
+            </article>
 
-            <div class="info-derecha">
-              <h3>¿Por qué elegirnos?</h3>
-              <ul>
-                <li>✔ Atención 24/7</li>
-                <li>✔ Médicos especialistas</li>
-                <li>✔ Consultas presenciales y virtuales</li>
-                <li>✔ Tecnología avanzada en diagnóstico</li>
-              </ul>
+            <article>
+              <h4>Pediatría</h4>
+              <a href="servicios.html">
+                <img src="assets/img/inicio/icono-pediatria.webp" alt="Pediatría" />
+              </a>
+              <p>
+                Cuida la salud de los más <br />
+                pequeños de la casa.
+              </p>
+            </article>
+
+            <article>
+              <h4>Laboratorio clínico</h4>
+              <a href="servicios.html">
+                <img src="assets/img/inicio/icono-laboratorio-medico.webp"alt="Laboratorio"/>
+              </a>
+              <p>
+                Resultados precisos y <br />
+                confiables para tu diagnóstico.
+              </p>
+            </article>
+          </div>
+        </section>
+
+        <section class="seccion contacto">
+          <div class="contenedor">
+            <div class="contenido-contacto">
+              <div class="info-izquierda">
+                <h3>Agenda tu cita:</h3>
+                <button type="button" class="boton">
+                  <a href="contacto.html" class="boton">
+                    Contáctanos ahora
+                  </a>
+                </button>
+              </div>
+
+              <div class="info-derecha">
+                <h3>¿Por qué elegirnos?</h3>
+                <ul>
+                  <li>✔ Atención 24/7</li>
+                  <li>✔ Médicos especialistas</li>
+                  <li>✔ Consultas presenciales y virtuales</li>
+                  <li>✔ Tecnología avanzada en diagnóstico</li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
-      </section>
-    </main>
+        </section>
+      </main>
 
-    <footer>
-      <p class="copy">Todos los derechos reservados</p>
-      <p class="copy">2025. Clinica Tu Salud &copy;</p>
-    </footer>
-  </body>
-</html>
+      <footer>
+        <p class="copy">Todos los derechos reservados</p>
+        <p class="copy">2025. Clinica Tu Salud &copy;</p>
+      </footer>
+    </body>
+  </html>
