--- a/servicios.html
+++ b/servicios.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <base href="/proyecto_clinica/"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="assets/img/inicio/icono-clinica.webp" type="image/x-icon"/>
     <link rel="stylesheet" href="assets/css/style.css"/>
     <title>Servicios Clinica Tu Salud</title>
@@ -24,11 +23,11 @@
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">☰</label>
         <ul class="menu">
-          <li><a href="pages/servicios.html">Servicios</a></li>
-          <li><a href="pages/nosotros.html">Nosotros</a></li>
-          <li><a href="pages/blog.html">Blog/Noticias</a></li>
-          <li><a href="pages/contacto.html">Contacto</a></li>
-          <li><a href="pages/login.html">Login</a></li>
+          <li><a href="servicios.html">Servicios</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="blog.html">Blog/Noticias</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="login.html">Login</a></li>
         </ul>
       </nav>
     </header>
@@ -45,7 +44,7 @@
 
       <div class="service-container">
         <div class="service-card">
-          <a href="pages/contacto.html">
+          <a href="contacto.html">
             <h2>Consultas Médicas</h2>
             <p>
               Atención personalizada en distintas especialidades como medicina
@@ -54,7 +53,7 @@
           </a>
         </div>
         <div class="service-card">
-          <a href="pages/contacto.html">
+          <a href="contacto.html">
             <h2>Emergencias 24/7</h2>
             <p>
               Atención inmediata y oportuna ante cualquier urgencia médica
@@ -63,7 +62,7 @@
           </a>
         </div>
         <div class="service-card">
-          <a href="pages/contacto.html">
+          <a href="contacto.html">
             <h2>Laboratorio Clínico</h2>
             <p>
               Realizamos análisis de sangre, orina y otros exámenes con
@@ -72,7 +71,7 @@
           </a>
         </div>
         <div class="service-card">
-          <a href="pages/contacto.html">
+          <a href="contacto.html">
             <h2>Ecografías y Rayos X</h2>
             <p>
               Contamos con equipos modernos para realizar diagnósticos precisos
@@ -81,7 +80,7 @@
           </a>
         </div>
         <div class="service-card">
-          <a href="pages/contacto.html">
+          <a href="contacto.html">
             <h2>Farmacia Interna</h2>
             <p>
               Ofrecemos medicamentos recetados por nuestros doctores
